--- a/Resources/administration/src/app/assets/less/variables.less
+++ b/Resources/administration/src/app/assets/less/variables.less
@@ -42,10 +42,11 @@
 @z-index-loader:                 10;
 @z-index-drag-select-box:        100;
 @z-index-sidebar:                200;
-@z-index-multi-select-results:   600;
+@z-index-select-results:         600;
 @z-index-flyout:                 700;
 @z-index-off-canvas:             750;
 @z-index-search-bar-results:     800;
 @z-index-modal:                  1000;
 @z-index-context-menu:           1100;
+@z-index-tooltip:                1100;
 @z-index-notifications:          1200;
