--- a/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
@@ -22,84 +22,84 @@
                 </sw-container>
 
                 {% block sw_sales_channel_detail_base_general_input_payments_methods %}
-                    <sw-multi-select id="paymentMethodIds"
-                                     class="sw-sales-channel-detail__input-payment-method"
-                                     :label="$tc('sw-sales-channel.detail.labelInputPaymentMethods')"
-                                     validation="required"
-                                     :serviceProvider="paymentMethodService"
-                                     :store="paymentMethodStore"
-                                     entityName="paymentMethod"
-                                     :defaultItemId="salesChannel.paymentMethodId"
-                                     v-model="salesChannel.paymentMethods"
-                                     @default_changed="changeDefaultPaymentMethod">
-                    </sw-multi-select>
+                    <sw-select id="paymentMethodIds"
+                               multi
+                               class="sw-sales-channel-detail__input-payment-method":label="$tc('sw-sales-channel.detail.labelInputPaymentMethods')"
+                               validation="required"
+                               :serviceProvider="paymentMethodService"
+                               :store="paymentMethodStore"
+                               entityName="paymentMethod"
+                               :defaultItemId="salesChannel.paymentMethodId"
+                               v-model="salesChannel.paymentMethods"
+                               @default_changed="changeDefaultPaymentMethod">
+                    </sw-select>
                 {% endblock %}
 
                 {% block sw_sales_channel_detail_base_general_input_shipping_methods %}
-                    <sw-multi-select id="shippingMethodIds"
-                                     class="sw-sales-channel-detail__input-shipping-method"
-                                     :label="$tc('sw-sales-channel.detail.labelInputShippingMethods')"
-                                     validation="required"
-                                     :serviceProvider="shippingMethodService"
-                                     :store="shippingMethodStore"
-                                     entityName="shippingMethod"
-                                     :defaultItemId="salesChannel.shippingMethodId"
-                                     v-model="salesChannel.shippingMethods"
-                                     @default_changed="changeDefaultShippingMethod">
-                    </sw-multi-select>
+                    <sw-select id="shippingMethodIds"
+                               multi
+                               class="sw-sales-channel-detail__input-shipping-method":label="$tc('sw-sales-channel.detail.labelInputShippingMethods')"
+                               validation="required"
+                               :serviceProvider="shippingMethodService"
+                               :store="shippingMethodStore"
+                               entityName="shippingMethod"
+                               :defaultItemId="salesChannel.shippingMethodId"
+                               v-model="salesChannel.shippingMethods"
+                               @default_changed="changeDefaultShippingMethod">
+                    </sw-select>
                 {% endblock %}
 
                 {% block sw_sales_channel_detail_base_general_input_countries %}
-                    <sw-multi-select id="countryIds"
-                                     class="sw-sales-channel-detail__input-countries"
-                                     :label="$tc('sw-sales-channel.detail.labelInputCountries')"
-                                     validation="required"
-                                     :serviceProvider="countryService"
-                                     :store="countryStore"
-                                     entityName="country"
-                                     :defaultItemId="salesChannel.countryId"
-                                     v-model="salesChannel.countries"
-                                     @default_changed="changeDefaultCountry">
-                    </sw-multi-select>
+                    <sw-select id="countryIds"
+                               multi
+                               class="sw-sales-channel-detail__input-countries":label="$tc('sw-sales-channel.detail.labelInputCountries')"
+                               validation="required"
+                               :serviceProvider="countryService"
+                               :store="countryStore"
+                               entityName="country"
+                               :defaultItemId="salesChannel.countryId"
+                               v-model="salesChannel.countries"
+                               @default_changed="changeDefaultCountry">
+                    </sw-select>
                 {% endblock %}
 
                 {% block sw_sales_channel_detail_base_general_input_currencies %}
-                    <sw-multi-select id="currencyIds"
-                                     class="sw-sales-channel-detail__input-currencies"
-                                     :label="$tc('sw-sales-channel.detail.labelInputCurrencies')"
-                                     validation="required"
-                                     :serviceProvider="currencyService"
-                                     :store="currencyStore"
-                                     entityName="currency"
-                                     :defaultItemId="salesChannel.currencyId"
-                                     v-model="salesChannel.currencies"
-                                     @default_changed="changeDefaultCurrency">
-                    </sw-multi-select>
+                    <sw-select id="currencyIds"
+                               multi
+                               class="sw-sales-channel-detail__input-currencies":label="$tc('sw-sales-channel.detail.labelInputCurrencies')"
+                               validation="required"
+                               :serviceProvider="currencyService"
+                               :store="currencyStore"
+                               entityName="currency"
+                               :defaultItemId="salesChannel.currencyId"
+                               v-model="salesChannel.currencies"
+                               @default_changed="changeDefaultCurrency">
+                    </sw-select>
                 {% endblock %}
 
                 {% block sw_sales_channel_detail_base_general_input_languages %}
-                    <sw-multi-select id="languageIds"
-                                     class="sw-sales-channel-detail__input-languages"
-                                     :label="$tc('sw-sales-channel.detail.labelInputLanguages')"
-                                     validation="required"
-                                     :serviceProvider="languageService"
-                                     :store="languageStore"
-                                     entityName="language"
-                                     :defaultItemId="salesChannel.languageId"
-                                     v-model="salesChannel.languages"
-                                     @default_changed="changeDefaultLanguage">
-                    </sw-multi-select>
+                    <sw-select id="languageIds"
+                               multi
+                               class="sw-sales-channel-detail__input-languages":label="$tc('sw-sales-channel.detail.labelInputLanguages')"
+                               validation="required"
+                               :serviceProvider="languageService"
+                               :store="languageStore"
+                               entityName="language"
+                               :defaultItemId="salesChannel.languageId"
+                               v-model="salesChannel.languages"
+                               @default_changed="changeDefaultLanguage">
+                    </sw-select>
                 {% endblock %}
 
                 {% block sw_sales_channel_detail_base_general_input_catalogs %}
-                    <sw-multi-select id="catalogIds"
-                                     class="sw-sales-channel-detail__input-catalogues"
-                                     :label="$tc('sw-sales-channel.detail.labelInputCatalogs')"
-                                     :serviceProvider="catalogService"
-                                     :store="catalogStore"
-                                     entityName="catalog"
-                                     v-model="salesChannel.catalogs">
-                    </sw-multi-select>
+                    <sw-select id="catalogIds"
+                               multi
+                               class="sw-sales-channel-detail__input-catalogues":label="$tc('sw-sales-channel.detail.labelInputCatalogs')"
+                               :serviceProvider="catalogService"
+                               :store="catalogStore"
+                               entityName="catalog"
+                               v-model="salesChannel.catalogs">
+                    </sw-select>
                 {% endblock %}
             </sw-card>
         {% endblock %}
