--- a/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.less
+++ b/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.less
@@ -6,10 +6,12 @@
     height: 100%;
     display: grid;
     grid-template-columns: 1fr auto;
+    grid-template-rows: 1fr;
+    justify-content: end;
+    overflow: hidden;
 
     .sw-card-view__content {
         width: 100%;
-        height: 1fr;
         padding: 40px;
         overflow-x: hidden;
         overflow-y: auto;
