NEXT-1072 - Add more tests for login

--- a/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.html.twig
@@ -117,7 +117,7 @@
 
                                     {% block sw_admin_menu_user_actions_items_logout_user %}
                                         <li class="sw-admin-menu__navigation-list-item">
-                                            <a href="#" class="sw-admin-menu__navigation-link" @click.prevent="onLogoutUser">
+                                            <a href="#" class="sw-admin-menu__navigation-link sw-admin-menu__logout-action" @click.prevent="onLogoutUser">
                                                 <sw-icon class="sw-admin-menu__navigation-link-icon"
                                                          name="default-action-log-out"
                                                          small>
