--- a/Resources/administration/src/module/sw-login/page/index/sw-login.html.twig
+++ b/Resources/administration/src/module/sw-login/page/index/sw-login.html.twig
@@ -58,7 +58,7 @@
                         {% block sw_login_submit %}
                             <div class="sw-login__submit">
                                 {% block sw_login_submit_button %}
-                                    <sw-button variant="primary">{{ $tc('sw-login.index.buttonLogin') }}</sw-button>
+                                    <sw-button class="sw-login_login-action" variant="primary">{{ $tc('sw-login.index.buttonLogin') }}</sw-button>
                                 {% endblock %}
                             </div>
                         {% endblock %}
