NEXT-984 - Make propagating of sidebar width optional

--- a/Resources/administration/src/app/component/sidebar/sw-sidebar-item/sw-sidebar-item.html.twig
+++ b/Resources/administration/src/app/component/sidebar/sw-sidebar-item/sw-sidebar-item.html.twig
@@ -1,4 +1,5 @@
 {% block sw_sidebar_item %}
+    <!-- TODO: Improve sidebar animation on multiple sidebar items -->
     <transition name="sw-sidebar-item-fade">
         <div v-if="showContent" class="sw-sidebar-item">
             {% block sw_sidebar_item_headline %}
