--- a/Resources/administration/src/app/component/sidebar/sw-sidebar-item/sw-sidebar-item.less
+++ b/Resources/administration/src/app/component/sidebar/sw-sidebar-item/sw-sidebar-item.less
@@ -48,6 +48,7 @@
     }
 }
 
+// Vue.js animations
 .sw-sidebar-item-fade-enter-active,
 .sw-sidebar-item-fade-leave-active {
     transition: opacity ease-in-out .3s,
