--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -56,7 +56,7 @@
                 {% block sw_media_catalog_smart_bar_media_upload %}
                     <sw-media-upload-button
                         :catalogId="getCatalogId()"
-                        :compact="true"
+                        variant="compact"
                         @new-media-entity="onNewMedia"
                         @new-upload-started="onNewUpload">
                     </sw-media-upload-button>
