--- a/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.html.twig
@@ -43,6 +43,7 @@
                             {% block sw_settings_language_detail_content_field_localeId %}
                                 <sw-select
                                         id="locales"
+                                        class="sw-settings-language-detail__select-locale"
                                         :label="$tc('sw-settings-language.detail.labelLocale')"
                                         :serviceProvider="localeService"
                                         :store="localeStore"
@@ -82,6 +83,7 @@
                         {% block sw_settings_language_detail_content_field_parentId %}
                             <sw-select
                                     id="inherit"
+                                    class="sw-settings-language-detail__select-parent"
                                     :label="$tc('sw-settings-language.detail.labelParent')"
                                     :serviceProvider="languageService"
                                     :store="languageStore"
